# MCP

./: .dockerignore  .env  .env.example  .env.production.template  .gitignore  AGENT_COORDINATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  LICENSE  README.md  SETUP.md  WORKING_SYSTEM_SUMMARY.md  agent_coordination_hub.py  agent_orchestrator.py  config.py  demo.py  docker-compose-wrapper.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  health_server.py  main.py  mcp_client.py  pyproject.toml  requirements.txt  run_server.py  server_registry.py  setup-ollama.sh  simple_orchestrator.py  smart_alert_agent.py  start-docker.sh  stop-docker.sh  streamlit_app.py  travel_agent.py  validate-docker.sh  weather.py  weather_intelligence_agent.py
