[project]
name = "weather-mcp-agent"
version = "0.2.0"
description = "Agentic MCP Server with LangGraph Orchestrator for Weather Services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langgraph>=0.2.0",
    "mcp[cli]>=1.17.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "typing-extensions>=4.0.0",
]
